[gd_scene load_steps=18 format=2]

[ext_resource path="res://Asset/UI/HUD/sprite/heart.png" type="Texture" id=1]
[ext_resource path="res://Asset/UI/HUD/sprite/4.png" type="Texture" id=2]
[ext_resource path="res://Asset/UI/HUD/sprite/5.png" type="Texture" id=3]
[ext_resource path="res://Asset/UI/HUD/sprite/1.png" type="Texture" id=4]
[ext_resource path="res://Asset/UI/HUD/sprite/2.png" type="Texture" id=5]
[ext_resource path="res://Asset/UI/HUD/sprite/3.png" type="Texture" id=6]
[ext_resource path="res://Asset/UI/HUD/sprite/m.png" type="Texture" id=7]
[ext_resource path="res://Asset/UI/HUD/sprite/0.png" type="Texture" id=8]
[ext_resource path="res://Asset/UI/HUD/sprite/8.png" type="Texture" id=9]
[ext_resource path="res://Asset/UI/HUD/sprite/9.png" type="Texture" id=10]
[ext_resource path="res://Asset/UI/HUD/sprite/6.png" type="Texture" id=11]
[ext_resource path="res://Asset/UI/HUD/sprite/7.png" type="Texture" id=12]
[ext_resource path="res://Asset/UI/HUD/sprite/pause.png" type="Texture" id=13]
[ext_resource path="res://Asset/UI/HUD/sprite/any_key.png" type="Texture" id=14]
[ext_resource path="res://Asset/UI/HUD/sprite/you_died.png" type="Texture" id=15]
[ext_resource path="res://Asset/UI/HUD/HUD.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "m",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[node name="HUD" type="Control"]
pause_mode = 2
script = ExtResource( 16 )

[node name="Health" type="Node2D" parent="."]
position = Vector2( 13, 14 )
scale = Vector2( 0.5, 0.5 )

[node name="Heart1" type="Sprite" parent="Health"]
position = Vector2( 36, 29 )
texture = ExtResource( 1 )

[node name="Heart2" type="Sprite" parent="Health"]
position = Vector2( 108, 29 )
texture = ExtResource( 1 )

[node name="Heart3" type="Sprite" parent="Health"]
position = Vector2( 182, 29 )
texture = ExtResource( 1 )

[node name="Heart4" type="Sprite" parent="Health"]
position = Vector2( 258, 29 )
texture = ExtResource( 1 )

[node name="Heart5" type="Sprite" parent="Health"]
position = Vector2( 332, 29 )
texture = ExtResource( 1 )

[node name="Distance" type="Node2D" parent="."]
position = Vector2( 980, 36 )
scale = Vector2( 0.75, 0.75 )

[node name="AnimatedSprite1" type="AnimatedSprite" parent="Distance"]
position = Vector2( -199.25, 0 )
frames = SubResource( 1 )
animation = "0"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Distance"]
position = Vector2( -151.75, 0 )
frames = SubResource( 1 )
animation = "0"

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Distance"]
position = Vector2( -104.25, 0 )
frames = SubResource( 1 )
animation = "0"

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Distance"]
position = Vector2( -59.2502, 0 )
frames = SubResource( 1 )
animation = "0"

[node name="M" type="AnimatedSprite" parent="Distance"]
position = Vector2( 3.74994, 0 )
frames = SubResource( 1 )
animation = "m"
playing = true

[node name="Pause" type="Node2D" parent="."]
visible = false

[node name="Pause" type="Sprite" parent="Pause"]
position = Vector2( 520, 302 )
texture = ExtResource( 13 )

[node name="GameOver" type="Node2D" parent="."]

[node name="AnyKey" type="Sprite" parent="GameOver"]
visible = false
position = Vector2( 541, 380 )
texture = ExtResource( 14 )

[node name="YouDied" type="Sprite" parent="GameOver"]
position = Vector2( 534, 200 )
texture = ExtResource( 15 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
